<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/black">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100sp"
        android:layout_gravity="center_horizontal"
        android:animateLayoutChanges="true"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imagenCard"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:label="@string/logo"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/roundedCornersImageView"
            app:srcCompat="@drawable/logonba" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/team"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/year"
                android:textColor="@color/white" />

            <ImageButton
                android:id="@+id/botonEliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="260sp"
                android:background="@android:drawable/ic_menu_delete" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>