<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="Fragments.EditTeam">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/titleLinear"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/nombreequipo"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/editNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombreequipo"
                android:inputType="text"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:maxLength="24"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/makerLinear"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/titleLinear">

            <TextView
                android:id="@+id/maker_tv"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/anyoequipo"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editAnyo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/anyoequipo"
                android:inputType="text"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:maxLength="24"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearJugadores"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/tituloJugadores"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/jugadores"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearAltura"
            android:layout_width="359dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/makerLinear">

            <TextView
                android:id="@+id/dorsalJugador"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/base"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <EditText
                android:id="@+id/editbase2"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:hint="@string/base"
                android:inputType="text"
                android:maxLength="24"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <Button
                android:id="@+id/btnInfoBase"
                android:layout_width="36dp"
                android:layout_height="34dp"
                android:layout_marginRight="60dp"
                android:layout_weight="1"
                android:background="@android:drawable/ic_dialog_info"
                android:backgroundTint="#000000" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearEdad"
            android:layout_width="359dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/makerLinear">

            <TextView
                android:id="@+id/edadJugador"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/escolta"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <EditText
                android:id="@+id/editescolta2"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:hint="@string/escolta"
                android:inputType="text"
                android:maxLength="24"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <Button
                android:id="@+id/btnInfoEscolta"
                android:layout_width="36dp"
                android:layout_height="34dp"
                android:layout_marginRight="60dp"
                android:layout_weight="1"
                android:background="@android:drawable/ic_dialog_info"
                android:backgroundTint="#000000" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearAlero"
            android:layout_width="359dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/makerLinear">

            <TextView
                android:id="@+id/aleroedit"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/alero"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <EditText
                android:id="@+id/editalero2"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:hint="@string/alero"
                android:inputType="text"
                android:maxLength="24"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <Button
                android:id="@+id/btnInfoAlero"
                android:layout_width="36dp"
                android:layout_height="34dp"
                android:layout_marginRight="60dp"
                android:layout_weight="1"
                android:background="@android:drawable/ic_dialog_info"
                android:backgroundTint="#000000" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearAlapivot"
            android:layout_width="359dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/makerLinear">

            <TextView
                android:id="@+id/alapivotedit"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/alapivot"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <EditText
                android:id="@+id/editalapivot2"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:hint="@string/alapivot"
                android:inputType="text"
                android:maxLength="24"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <Button
                android:id="@+id/btnInfoAlaPivot"
                android:layout_width="36dp"
                android:layout_height="34dp"
                android:layout_marginRight="60dp"
                android:layout_weight="1"
                android:background="@android:drawable/ic_dialog_info"
                android:backgroundTint="#000000" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearPivot"
            android:layout_width="359dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/makerLinear">

            <TextView
                android:id="@+id/pivotedit"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/pivot"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <EditText
                android:id="@+id/editpivot2"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:hint="@string/pivot"
                android:inputType="text"
                android:maxLength="24"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <Button
                android:id="@+id/btnInfoPivot"
                android:layout_width="36dp"
                android:layout_height="34dp"
                android:layout_marginRight="60dp"
                android:layout_weight="1"
                android:background="@android:drawable/ic_dialog_info"
                android:backgroundTint="#000000" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/addcancelLinear"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/imagenCard"/>

        <LinearLayout
            android:id="@+id/linearFoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imagenFoto"
                android:layout_width="144dp"
                android:layout_height="141dp"
                android:layout_weight="1"
                android:src="@android:drawable/ic_menu_report_image" />

            <Button
                android:id="@+id/botonSeleccionarFoto"
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="70sp"
                android:layout_marginBottom="10sp"
                android:layout_weight="1"
                android:fontFamily="@font/krona_one"
                android:text="Seleccionar Foto" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/saveButton"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/addcancelLinear">

            <Button
                android:id="@+id/save_button"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:onClick="saveItem"
                android:text="Guardar"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:textAppearance="@android:style/TextAppearance.Medium"/>
            <Button
                android:id="@+id/cancel_button"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:onClick="cancelItem"
                android:text="Cancelar"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:textAppearance="@android:style/TextAppearance.Medium"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>