<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".Fragments.AddTeam">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_edit_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/linearNombreEquipo"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/makerLinear">

                <TextView
                    android:id="@+id/nameEquipo"
                    android:layout_width="104dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/krona_one"
                    android:gravity="center_vertical"
                    android:text="@string/nombreequipo"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editNameEquipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombreequipo"
                    android:inputType="text"
                    android:maxLength="24"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/white"
                    android:textColorHint="#848484"
                    android:textSize="14sp"
                    android:textStyle="italic" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearAnyo"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/makerLinear">

                <TextView
                    android:id="@+id/anyoEquipo"
                    android:layout_width="104dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/krona_one"
                    android:layout_marginLeft="10dp"
                    android:text="@string/year"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editAnyo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/year"
                    android:inputType="text"
                    android:maxLength="24"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/white"
                    android:textColorHint="#848484"
                    android:textSize="14sp"
                    android:textStyle="italic" />

            </LinearLayout>



            <LinearLayout
                android:id="@+id/linearJugadores"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/makerLinear"
                >

                <TextView
                    android:id="@+id/tituloJugadores"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/krona_one"
                    android:layout_marginLeft="10dp"
                    android:text="@string/jugadores"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearBase"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/makerLinear">

                <TextView
                    android:id="@+id/nameBase"
                    android:layout_width="104dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/krona_one"
                    android:layout_marginLeft="10dp"
                    android:text="@string/base"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <AutoCompleteTextView
                    android:id="@+id/editBase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/base"
                    android:inputType="text"
                    android:maxLength="24"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/white"
                    android:textColorHint="#848484"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    android:completionThreshold="1"
                    android:completionHint="@string/base"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearEscolta"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/makerLinear">

                <TextView
                    android:id="@+id/nameEscolta"
                    android:layout_width="104dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/krona_one"
                    android:layout_marginLeft="10dp"
                    android:text="@string/escolta"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <AutoCompleteTextView
                    android:id="@+id/editEscolta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/escolta"
                    android:inputType="text"
                    android:maxLength="24"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/white"
                    android:textColorHint="#848484"
                    android:textSize="14sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearAlero"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/makerLinear">

                <TextView
                    android:id="@+id/aleroedit"
                    android:layout_width="104dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/krona_one"
                    android:layout_marginLeft="10dp"
                    android:text="@string/alero"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <AutoCompleteTextView
                    android:id="@+id/editAlero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/alero"
                    android:inputType="text"
                    android:maxLength="24"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/white"
                    android:textColorHint="#848484"
                    android:textSize="14sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearAlapivot"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/makerLinear">

                <TextView
                    android:id="@+id/alapivotedit"
                    android:layout_width="104dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/krona_one"
                    android:layout_marginLeft="10dp"
                    android:text="@string/alapivot"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <AutoCompleteTextView
                    android:id="@+id/editAlapivot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/alapivot"
                    android:inputType="text"
                    android:maxLength="24"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/white"
                    android:textColorHint="#848484"
                    android:textStyle="italic"
/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearPivot"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/makerLinear">

                <TextView
                    android:id="@+id/pivotedit"
                    android:layout_width="104dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/krona_one"
                    android:layout_marginLeft="10dp"
                    android:text="@string/pivot"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <AutoCompleteTextView
                    android:id="@+id/editPivot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pivot"
                    android:inputType="text"
                    android:maxLength="24"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/white"
                    android:textColorHint="#848484"
                    android:textSize="14sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearFoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imagenFoto"
                    android:layout_width="144dp"
                    android:layout_height="141dp"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_menu_report_image" />

                <Button
                    android:id="@+id/botonSeleccionarFoto"
                    android:layout_width="126dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70sp"
                    android:layout_marginBottom="10sp"
                    android:layout_weight="1"
                    android:fontFamily="@font/krona_one"
                    android:text="Seleccionar Foto" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAceptarEquipo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Aceptar" />

            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>